# sentinel-comm

./: CMakeLists.txt  LICENSE  README.md
benchmarks/: bench_dispatch.cu  plot_benchmarks.py
docs/: launch-notes.md  make_banner.py  why-your-persistent-kernel-deadlocks.md
examples/: hello_roundtrip.cpp
include/: sentinel_comm.h  sentinel_comm_device.cuh
src/: sentinel_comm.cu  user_handlers.cu
tests/: test_roundtrip.cpp
